# ishot

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  build.sh  camera.html  clipboard-history.html  hud.html  index.html  package.json  pin.html  recorder.html  recording-preview.html  recording.html  run.sh  scroll-border.html  scroll-panel.html  session-ses_21c6.md  settings.html  vite.config.ts
.github/: FUNDING.yml
docs/superpowers/plans/: 2026-05-01-scroll-capture-plan.md  2026-05-03-scroll-stitch-enhancement.md
docs/superpowers/specs/: 2026-05-01-scroll-capture-design.md  2026-05-03-scroll-stitch-enhancement-design.md
scripts/: build-icons.ts  release.ts
src/: AGENTS.md  App.tsx  Camera.tsx  ClipboardHistory.tsx  Dropdown.tsx  Hud.tsx  OverlayErrorBoundary.tsx  Pin.tsx  Recording.tsx  RecordingPreview.tsx  ScrollPanel.tsx  Settings.tsx  ToolIcon.tsx  camera-main.tsx  clipboard-history-main.tsx  clipboard-history.css  gradients.ts  hud-main.tsx  icons.tsx  main.tsx  pin-main.tsx  recording-main.tsx  recording-preview-main.tsx  scroll-panel-main.tsx  settings-main.tsx  settings.css  styles.css  theme.css  theme.ts
src-tauri/: -  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.pi-lens/: turn-state.json
src-tauri/.pi-lens/cache/: rust-rules-v1.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  error.rs  main.rs  overlay_panel.rs
src-tauri/src/commands/: AGENTS.md  ai_chat.rs  appearance.rs  clipboard_history.rs  file.rs  hud.rs  mod.rs  ocr.rs  pin.rs  recorder.rs  screenshot.rs  scroll_capture.rs  settings.rs  translate.rs  window.rs  window_enum.rs
src-tauri/src/services/: AGENTS.md  accessibility.rs  ai_chat.rs  clipboard_history.rs  clipboard_panel.rs  cursor_track.rs  hud.rs  keychain.rs  mod.rs  ocr.rs  recorder.rs  screen_capture.rs  scroll_capture.rs  scroll_events.rs  settings.rs  settings_panel.rs  translate.rs  window_enum.rs
src-tauri/tests/: screenshot_test.rs.bak  xcap_test.rs
