[package]
name = "ishot"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
cocoa = "0.26"
objc = "0.2"
objc2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1.0"
image = "0.25"
arboard = { version = "3.4", features = ["image-data"] }
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
png = "0.17"
dirs = "5"
chrono = "0.4"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2.3"
tauri-plugin-notification = "2.3"
sha2 = "0.10"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", version = "2.1.0" }
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

